--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Arthur Damm <indigoarthur@gmail.com>
-Laura Roudge <laura.derohan@gmail.com>
+Mohamed Salat <mohamedsalat62@gmail.com>
+Sayed Omari <osayedunoff@gmail.com>
